feat: experimental sync engine
